<resources>
    <string name="app_name">MOBILKA</string>
    <string name="title_home">НОВОСТИ</string>
    <string name="title_dashboard">ФИЛЬМЫ</string>
    <string name="title_notifications">БИЛЕТЫ</string>
    <string name="change_password">ИЗМЕНИТЬ ПАРОЛЬ</string>
    <string name="link_card">ПРИВЯЗАТЬ КАРТУ</string>
    <string name="purchase_history">ИСТОРИЯЯ ПОКУПОК</string>
    <string name="fi">ИМЯ ФАМИЛИЯ</string>
    <string name="linked_card">ПРИВЯЗАННАЯ КАРТА:</string>
    <string name="old_password">ВВЕДИТЕ СТАРЫЙ ПАРОЛЬ</string>
    <string name="new_password">ВВЕДИТЕ НОВЫЙ ПАРОЛЬ</string>
    <string name="repeat_new_password">ПОВТОРТЕ ПАРОЛЬ</string>
    <string name="card">2512 **** **** **** 1345</string>
    <string name="n_card">НОМЕР КАРТЫ</string>
    <string name="d_card">СРОК ДЕЙСТВИЯ КАРТЫ</string>
    <string name="name_card">ИМЯ ВЛАДЕЛЬЦА</string>
    <string name="kod_card">CVV КОД</string>КОД
    <string name="password">ПАРОЛЬ</string>
    <string name="login">ЛОГИН</string>
    <string name="enter">ВОЙТИ</string>
    <string name="fio">ФИО</string>
    <string name="registration">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="mail">ПОЧТА</string>
    <string name="phone">ТЕЛЕФОН</string>
    <string name="timetable">ПОСМОТРЕТЬ РАСПИСАНИЕ</string>
    <string name="name_film">НАЗВАНИЕ ФИЛЬМА</string>
    <string name="Equilibrium">ЭКВИЛИБРИУМ</string>
    <string name="Equilibrium_hist">Действие происходит в будущем, когда люди лишены возможности выражать какие-то эмоции, потому, что они… запрещены. Это — та цена, которую человечество платит за устранение из своей жизни войны. Теперь книги, искусство и музыка находятся вне закона. А любое чувство — уже преступление, наказуемое смертью.</string>
    <string name="Equilibrium_date">6 декабря 2002</string>
    <string name="Equilibrium_rej">Курт Уиммер</string>
    <string name="Equilibrium_genre">фантастика, боевик, триллер, драма</string>
    <string name="Equilibrium_role">Кристиан Бэйл, Тэй Диггз, Энгус Макфадьен, Шон Бин и др.</string>
    <string name="Equilibrium_duration">107 мин.</string>
    <string name="Equilibrium_age">16+</string>
    <string name="film_date">Дата выхода:</string>
    <string name="film_rej">Режиссёр:</string>
    <string name="film_genre">Жанр:</string>
    <string name="film_role">В ролях:</string>
    <string name="film_duration">Продолжительность фильма:</string>
    <string name="film_age">Возрастное ограничение:</string>
    <string name="news">НОВОСТИ</string>
    <string name="films">ФИЛЬМЫ</string>
    <string name="tickets">БИЛЕТЫ</string>
    <string name="profile">ПРОФИЛЬ</string>
    <string name="opisanie_film">Тут какое-то описание фильма...</string>
    <string name="blij_seanses">Ближайшие сеансы:</string>
    <string name="time_10">10:00</string>
    <string name="time_12">12:00</string>
    <string name="d2">2D</string>
    <string name="d3">3D</string>
    <string name="stoimost250">250р</string>
    <string name="stoimost400">400р</string>
    <string name="sale">Акция!!!</string>
    <string name="sale_inf">С 29.02.2022 ПО 31.02.2022 СКИДКА 100%ВСЕМ ПОСЕТИТЕЛЯМ КИНОТЕАТРА</string>
    <string name="paid">ОПЛАТА ПРОВЕДЕНА УСПЕШНО</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_caps">МОЙ ПРОФИЛЬ</string>
    <string name="more">ПОДРОБНЕЕ</string>
    <string name="time_13">13:25</string>
    <string name="time_14">14:50</string>
    <string name="time_15">15:25</string>
    <string name="time_17">17:25</string>
    <string name="time_19">19:45</string>
    <string name="stoimost600">600р</string>
    <string name="date_12.03.2222">12 МАРТА 2222</string>
    <string name="time_18_00">18:00</string>
    <string name="mesto">РЯД 7, МЕСТО 5</string>
    <string name="rrr">РЯД</string>
    <string name="MMM">МЕСТО</string>
    <string name="film">ФИЛЬМ</string>
    <string name="COST">ЦЕНА</string>
    <string name="POKUPKA">КУПИТЬ БИЛЕТ</string>
    <string name="rrr_1">1</string>
    <string name="rrr_2">2</string>
    <string name="rrr_3">3</string>
    <string name="rrr_4">4</string>
    <string name="exit">exit</string>
</resources>