<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    tools:context=".LinkingCardFragment">

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="504dp"
        android:background="@drawable/round"
        android:ems="10"
        android:gravity="center"
        android:textColor="#F2F2F2"
        android:inputType="textPersonName"
        android:text="@string/n_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="436dp"
        android:background="@drawable/round"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/d_card"
        android:textColor="#F2F2F2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="368dp"
        android:background="@drawable/round"
        android:ems="10"
        android:gravity="center"
        android:textColor="#F2F2F2"
        android:inputType="textPersonName"
        android:text="@string/n_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginBottom="304dp"
        android:background="@drawable/round"
        android:ems="10"
        android:gravity="center"
        android:textColor="#F2F2F2"
        android:inputType="textPersonName"
        android:text="@string/kod_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="192dp"
        android:layout_height="51dp"
        android:layout_marginBottom="108dp"
        android:backgroundTint="@color/purple_1"
        android:text="@string/link_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>