<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F2F2F2"
    android:layout_height="match_parent"
    tools:context=".Changing_passwordFragment">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="289dp"
        android:layout_height="63dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="228dp"
        android:background="@drawable/round"
        android:backgroundTint="#582F73"
        android:ems="10"
        android:foregroundTint="#582F73"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/old_password"
        android:textColor="#F2F2F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginBottom="112dp"
        android:backgroundTint="@color/purple_1"
        android:gravity="center"
        android:text="@string/change_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        app:layout_constraintVertical_bias="0.629" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="289dp"
        android:layout_height="63dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="364dp"
        android:background="@drawable/round"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/new_password"
        android:textColor="#F2F2F2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="289dp"
        android:layout_height="63dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="284dp"
        android:background="@drawable/round"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/repeat_new_password"
        android:textColor="#F2F2F2"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>